# AdventOfCode

./: .editorconfig  Cargo.toml  README.md  flake.nix
.zed/: tasks.json
2015/: Cargo.toml
2015/1/: main.rs
2015/2/: main.rs
2015/3/: main.rs
2015/4/: main.rs
2015/5/: main.rs
2015/6/: main.rs
2015/8/: main.rs
2015/rust/: Cargo.toml
2015/rust/23/: main.rs
2015/rust/8/: input.txt
2021/: Cargo.toml
2021/1/: main.rs
2021/2/: main.rs
2021/rust/: Cargo.toml
2021/rust/3/: main.rs
2022/: Cargo.toml
2022/1/: main.rs
2022/10/: main.rs
2022/2/: main.rs
2022/4/: main.rs
2022/7/: main.rs
2022/8/: main.rs
2022/9/: main.rs
2022/rust/: Cargo.toml
2022/rust/03/: main.rs
2022/rust/04/: main.rs
2022/rust/06/: main.rs
2022/rust/5/: main.rs
2022/zig/11/: main.zig
2023/fsharp/01/: program.fsx
2023/fsharp/02/: program.fsx
2023/zig/01/: main.zig
2023/zig/02/: main.zig
2024/zig/00/: input.txt  main.zig
2024/zig/01/: main.zig
2024/zig/02/: main.zig
2024/zig/03/: main.zig
2024/zig/04/: main.zig
2024/zig/05/: main.zig
2024/zig/06/: main.zig
2025/zig/01/: main.zig
2025/zig/02/: main.zig
2025/zig/03/: main.zig
2025/zig/04/: main.zig
2025/zig/05/: main.zig
2025/zig/06/: main.zig
2025/zig/07/: main.zig
lib/rust/src/: parse.rs  pos.rs
lib/src/: lib.rs  parse.rs
