[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc = { path = "../lib" }
itertools = "0.10.5"
rust-crypto = "0.2.36"

[[bin]]
name = "1"
path = "1/main.rs"

[[bin]]
name = "2"
path = "2/main.rs"

[[bin]]
name = "3"
path = "3/main.rs"

[[bin]]
name = "4"
path = "4/main.rs"

[[bin]]
name = "5"
path = "5/main.rs"

[[bin]]
name = "6"
path = "6/main.rs"

[[bin]]
name = "8"
path = "8/main.rs"

[[bin]]
name = "23"
path = "23/main.rs"
