[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc = { path = "../../lib/rust" }
itertools = "0.10.5"
rust-crypto = "0.2.36"

[[bin]]
name = "2015_01"
path = "01/main.rs"

[[bin]]
name = "2015_02"
path = "02/main.rs"

[[bin]]
name = "2015_03"
path = "03/main.rs"

[[bin]]
name = "2015_04"
path = "04/main.rs"

[[bin]]
name = "2015_05"
path = "05/main.rs"

[[bin]]
name = "2015_06"
path = "06/main.rs"

[[bin]]
name = "2015_08"
path = "08/main.rs"

[[bin]]
name = "2015_23"
path = "23/main.rs"
