[package]
name = "AoC2022"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc = { path = "../../lib/rust" }
itertools = "0.10.5"
rust-crypto = "0.2.36"

[[bin]]
name = "2022_1"
path = "1/main.rs"

[[bin]]
name = "2022_2"
path = "2/main.rs"

[[bin]]
name = "2022_3"
path = "3/main.rs"

[[bin]]
name = "2022_4"
path = "4/main.rs"

[[bin]]
name = "2022_5"
path = "5/main.rs"

[[bin]]
name = "2022_6"
path = "6/main.rs"

[[bin]]
name = "2022_7"
path = "7/main.rs"

[[bin]]
name = "2022_8"
path = "8/main.rs"

[[bin]]
name = "2022_9"
path = "9/main.rs"

[[bin]]
name = "2022_10"
path = "10/main.rs"
