[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc = { path = "../../lib/rust" }
itertools = "0.10.5"
rust-crypto = "0.2.36"

[[bin]]
name = "2022_01"
path = "01/main.rs"

[[bin]]
name = "2022_02"
path = "02/main.rs"

[[bin]]
name = "2022_03"
path = "03/main.rs"

[[bin]]
name = "2022_04"
path = "04/main.rs"

[[bin]]
name = "2022_05"
path = "05/main.rs"

[[bin]]
name = "2022_06"
path = "06/main.rs"

[[bin]]
name = "2022_07"
path = "07/main.rs"

[[bin]]
name = "2022_08"
path = "08/main.rs"

[[bin]]
name = "2022_09"
path = "09/main.rs"

[[bin]]
name = "2022_10"
path = "10/main.rs"
